fixed changes part7